[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Q-prob"
version = "0.1.0"
description = "Q-prob"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "ale_py>=0.10.1",
    "dm_control>=1.0.25",
    "gymnasium>=1.0.0",
    "imageio>=2.0.0",
    "numpy>=2.0.0",
    "opencv_python>=4.10.0.84",
    "torch>=2.3.0",
    "pufferlib>=3.0.0",
]
