[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Q-prob"
version = "0.1.0"
description = "Q-prob"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "gymnasium",
    "numpy",
    "torch",
    "matplotlib",
    "ipykernel",
    "pufferlib>=3.0.0",
]
